add new api for permission